1998-04-16  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* QSort.m: Include misc.h.
	
	* InFile.m: Include collections.h, not collections/String.h.

	* UName.m: Don't include collections/String.h.  stdlib.h, or
	string.h.  Include collections.h and misc.h.

	* NSelect.h, ObjectLoader.m, ObjectSaver.[hm], QSort.[hm]:
	Reformatting throughout.
	
	* AppendFile.[hm]: Minor reformatting.

	* simtools.h:  Move tagged documentation to the respective protocols
	definition.
	
	* ActiveOutFile.m, AppendFile.m, InFile.m, NSelect.m,
	ObjectLoader.m, ObjectSaver.m, OutFile.m, UName.m: Remove tagged
	documentation.  (Move it to simtools.h.)

1998-04-15  Irene Lee  <lee@wijiji.santafe.edu>

	* ActiveOutFile.m, AppendFile.m, InFile.m, NSelect.m, ObjectLoader.m,
	ObjectSaver.m, OutFile.m, QSort.m, UName.m, simtools.m:
	Add comment tags with documentation.

1998-04-06  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* simtools.h: Declare new function initSwarmArguments.

	* simtools.m (initSwarmArguments): New function. 
	(initSwarm): Call initSwarmArguments with NULL.

1998-03-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* simtools.m: Don't define arguments here (now in objectbase).

	* Makefile (HEADERS): Remove global.h.
	(simtools.o): Remove global.h as a dependency.

	* Archiver.m: Don't include simtools/global.h.
	(global.h): Removed.

1998-02-26  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* NSelect.m:  Include random.h.

	* simtools.m: Don't include time.h or string.h.  Don't define
	probeDisplayManager.  Include simtoolsgui.h.
	(initSwarm): Don't call GUI_INIT, instead call initSimtoolsGUI if
	swarmGUIMode.
	(buildWindowGeometryRecordName, _createProbeDisplay,
	_createCompleteProbeDisplay, getKeyForName,
	createArchivedProbeDisplayNamed,
	createArchivedCompleteProbeDisplayNamed): Remove (moved to
	simtoolsgui.m).

	* simtools.h: Remove ControlPanel, WindowGeometryRecordName,
	CompositeWindowGeometryRecordName, ActioonCache, ProbeDisplay,